cluster/05-gateway-nginx/kustomization/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ws-server
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "ws.do.freetale.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ws-server
      port: 80
